[enh] run-elasticsearch.sh : auto download if version not present