@@ -22,18 +22,21 @@ package net.sumaris.core.dao.data.vessel;
  * #L%
  */
 
+import com.google.common.collect.Lists;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import net.sumaris.core.dao.data.DataRepositoryImpl;
 import net.sumaris.core.dao.referential.ReferentialDao;
 import net.sumaris.core.dao.referential.location.LocationRepository;
 import net.sumaris.core.dao.technical.Daos;
-import net.sumaris.core.event.config.ConfigurationEvent;
+import net.sumaris.core.dao.technical.Page;
+import net.sumaris.core.dao.technical.SortDirection;
 import net.sumaris.core.event.config.ConfigurationReadyEvent;
 import net.sumaris.core.event.config.ConfigurationUpdatedEvent;
 import net.sumaris.core.model.data.Vessel;
 import net.sumaris.core.model.data.VesselFeatures;
 import net.sumaris.core.model.data.VesselRegistrationPeriod;
+import net.sumaris.core.model.referential.location.Location;
 import net.sumaris.core.util.Dates;
 import net.sumaris.core.util.StringUtils;
 import net.sumaris.core.vo.administration.user.DepartmentVO;
@@ -42,15 +45,11 @@ import net.sumaris.core.vo.data.vessel.VesselFetchOptions;
 import net.sumaris.core.vo.filter.VesselFilterVO;
 import net.sumaris.core.vo.referential.LocationVO;
 import net.sumaris.core.vo.referential.ReferentialVO;
-import org.apache.commons.lang3.ArrayUtils;
 import org.hibernate.jpa.QueryHints;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.event.EventListener;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 
-import javax.annotation.Nullable;
 import javax.annotation.Nullable;
 import javax.persistence.EntityGraph;
 import javax.persistence.EntityManager;
@@ -58,7 +57,7 @@ import javax.persistence.Tuple;
 import javax.persistence.TypedQuery;
 import javax.persistence.criteria.*;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 public class VesselSnapshotRepositoryImpl
@@ -73,6 +72,9 @@ public class VesselSnapshotRepositoryImpl
     protected boolean enableRegistrationCodeSearchAsPrefix;
     protected boolean enableAdagioOptimization;
     protected String adagioSchema;
+
+    private boolean enableAdagioOptimization = false;
+    private String adagioSchema = null;
 
     @Autowired
     public VesselSnapshotRepositoryImpl(EntityManager entityManager,
@@ -101,63 +103,46 @@ public class VesselSnapshotRepositoryImpl
     }
 
     @Override
-    public Page<VesselSnapshotVO> findAll(@NonNull VesselFilterVO filter,
-                                          @NonNull Pageable pageable,
-                                          @NonNull VesselFetchOptions fetchOptions) {
-
-        CriteriaBuilder cb = this.getEntityManager().getCriteriaBuilder();
-        CriteriaQuery<Tuple> criteriaQuery = cb.createTupleQuery();
-
-        Root<VesselFeatures> root = criteriaQuery.from(VesselFeatures.class);
-        Join<VesselFeatures, Vessel> vessel = Daos.composeJoin(root, VesselFeatures.Fields.VESSEL, JoinType.INNER);
-        ListJoin<Vessel, VesselRegistrationPeriod> vrp = composeVrpJoin(root, cb);
-
-        criteriaQuery.multiselect(root, vessel, vrp)
-            .distinct(true);
-
-        // Apply specification
-        Specification<VesselFeatures> spec = toSpecification(filter, fetchOptions);
-        Predicate predicate = spec.toPredicate(root, criteriaQuery, cb);
-        if (predicate != null) criteriaQuery.where(predicate);
-
-        // Add sorting
-        addSorting(criteriaQuery, root, cb, pageable);
-
-        TypedQuery<Tuple> query = getEntityManager().createQuery(criteriaQuery);
-
-        // Bind parameters
-        applyBindings(query, spec);
-
-        // Configure (set hints)
-        configureQuery(query, fetchOptions);
-
-        return readPage(query, pageable, () -> count(spec))
-            .map(tuple -> toVO(tuple, fetchOptions, true));
-
+    public List<VesselSnapshotVO> findAll(@Nullable VesselFilterVO filter, int offset, int size, String sortAttribute, SortDirection sortDirection, VesselFetchOptions fetchOptions) {
+        return this.findAll(filter, Page.create(offset, size, sortAttribute, sortDirection), fetchOptions);
     }
 
     @Override
-    public List<VesselSnapshotVO> findAll(@NonNull VesselFilterVO filter,
-                                          @NonNull net.sumaris.core.dao.technical.Page page,
-                                          @NonNull VesselFetchOptions fetchOptions) {
+    public List<VesselSnapshotVO> findAll(@Nullable VesselFilterVO filter,
+                                          @Nullable Page page,
+                                          @Nullable VesselFetchOptions fetchOptions) {
 
         CriteriaBuilder cb = this.getEntityManager().getCriteriaBuilder();
         CriteriaQuery<Tuple> criteriaQuery = cb.createTupleQuery();
 
         Root<VesselFeatures> root = criteriaQuery.from(VesselFeatures.class);
         Join<VesselFeatures, Vessel> vessel = Daos.composeJoin(root, VesselFeatures.Fields.VESSEL, JoinType.INNER);
-        ListJoin<Vessel, VesselRegistrationPeriod> vrp = composeVrpJoin(vessel, cb, null);
+        List<Selection<?>> selection = Lists.newArrayList(root, vessel);
 
-        criteriaQuery.multiselect(root, vessel, vrp)
-            .distinct(true);
+        if (fetchOptions != null && fetchOptions.isWithBasePortLocation()) {
+            Join<?, Location> basePortLocation = Daos.composeJoin(root, VesselFeatures.Fields.BASE_PORT_LOCATION);
+            selection.add(basePortLocation);
+        }
+        if (fetchOptions != null && fetchOptions.isWithVesselRegistrationPeriod()) {
+            ListJoin<Vessel, VesselRegistrationPeriod> vrp = composeVrpJoin(vessel, cb, null);
+            selection.add(vrp);
+            Join<?, Location> registrationLocation = Daos.composeJoin(vrp, VesselRegistrationPeriod.Fields.REGISTRATION_LOCATION);
+            selection.add(registrationLocation);
+        }
+
+        criteriaQuery.multiselect(selection).distinct(true);
 
         // Apply specification
-        Specification<VesselFeatures> spec = toSpecification(filter, fetchOptions);
-        Predicate predicate = spec.toPredicate(root, criteriaQuery, cb);
+        Specification<VesselFeatures> spec = filter != null ? toSpecification(filter, fetchOptions) : null;
+        Predicate predicate = spec != null ? spec.toPredicate(root, criteriaQuery, cb) : null;
         if (predicate != null) criteriaQuery.where(predicate);
 
         // Add sorting
-        addSorting(criteriaQuery, root, cb, page.getSortBy(), page.getSortDirection());
+        if (page != null && StringUtils.isNotBlank(page.getSortBy())) {
+            // Fix sort property, from VO to entity
+            String sortBy = toEntityPropertyName(page.getSortBy());
+            addSorting(criteriaQuery, builder, root, sortBy, page.getSortDirection());
+        }
 
         TypedQuery<Tuple> query = getEntityManager().createQuery(criteriaQuery);
 
@@ -165,15 +150,19 @@ public class VesselSnapshotRepositoryImpl
         applyBindings(query, spec);
 
         // Set Limit
-        query.setFirstResult((int)page.getOffset());
-        query.setMaxResults(page.getSize());
+        if (page != null) {
+            query.setFirstResult((int) page.getOffset());
+            query.setMaxResults(page.getSize());
+        }
 
-        // Configure (set hints)
+        // Set hints
         configureQuery(query, fetchOptions);
 
-        return streamQuery(query)
-            .map(tuple -> toVO(tuple, fetchOptions, true))
-            .collect(Collectors.toList());
+        try (Stream<Tuple> stream = streamQuery(query)) {
+            return stream.map(tuple -> toVO(tuple, fetchOptions, true))
+                .toList();
+        }
+
     }
 
     @Override
@@ -182,7 +171,9 @@ public class VesselSnapshotRepositoryImpl
             // IDs
             .and(id(filter.getVesselFeaturesId(), Integer.class))
             .and(vesselId(filter.getVesselId()))
+            // Type
             .and(vesselTypeId(filter.getVesselTypeId()))
+            .and(vesselTypeIds(filter.getVesselTypeIds()))
             // by locations
             .and(registrationLocation(filter.getRegistrationLocationId()))
             .and(basePortLocation(filter.getBasePortLocationId()))
@@ -207,7 +198,8 @@ public class VesselSnapshotRepositoryImpl
                 source.getStartDate()).orElse(null);
         }
 
-        this.toVO(source, source.getVessel(), registrationPeriod,
+        this.toVO(source, source.getVessel(), source.getBasePortLocation(),
+            registrationPeriod, registrationPeriod != null ? registrationPeriod.getRegistrationLocation() : null,
             target, fetchOptions, copyIfNull);
     }
 
@@ -241,51 +233,67 @@ public class VesselSnapshotRepositoryImpl
     protected VesselSnapshotVO toVO(Tuple source, VesselFetchOptions fetchOptions, boolean copyIfNull) {
         VesselSnapshotVO target = new VesselSnapshotVO();
 
-        VesselFeatures features = source.get(0, VesselFeatures.class);
-        Vessel vessel = source.get(1, Vessel.class);
-        VesselRegistrationPeriod registrationPeriod = source.get(2, VesselRegistrationPeriod.class);
+        int index = 0;
+        VesselFeatures features = source.get(index++, VesselFeatures.class);
+        Vessel vessel = source.get(index++, Vessel.class);
+        Location basePortLocation = (fetchOptions != null && fetchOptions.isWithBasePortLocation())
+            ? source.get(index++, Location.class) : null;
 
-        toVO(features, vessel, registrationPeriod, target, fetchOptions, copyIfNull);
+        VesselRegistrationPeriod registrationPeriod = null ;
+        Location registrationLocation = null ;
+        if (fetchOptions != null && fetchOptions.isWithVesselRegistrationPeriod()) {
+            registrationPeriod = source.get(index++, VesselRegistrationPeriod.class);
+            registrationLocation = source.get(index++, Location.class);
+        }
+
+        toVO(features, vessel, basePortLocation, registrationPeriod, registrationLocation, target, fetchOptions, copyIfNull);
 
         return target;
     }
 
-    protected void toVO(VesselFeatures features,
+    protected void toVO(VesselFeatures source,
                         Vessel vessel,
+                        Location basePortLocation,
                         VesselRegistrationPeriod registrationPeriod,
+                        Location registrationLocation,
                         VesselSnapshotVO target,
                         VesselFetchOptions fetchOptions, boolean copyIfNull) {
-        super.toVO(features, target, fetchOptions, copyIfNull);
+        super.toVO(source, target, fetchOptions, copyIfNull);
 
         // Convert from cm to m
-        if (features.getLengthOverAll() != null) {
-            target.setLengthOverAll(features.getLengthOverAll().doubleValue() / 100);
+        if (source.getLengthOverAll() != null) {
+            target.setLengthOverAll(source.getLengthOverAll().doubleValue() / 100);
         }
         // Convert tonnage (divide by 100)
-        if (features.getGrossTonnageGrt() != null) {
-            target.setGrossTonnageGrt(features.getGrossTonnageGrt().doubleValue() / 100);
+        if (source.getGrossTonnageGrt() != null) {
+            target.setGrossTonnageGrt(source.getGrossTonnageGrt().doubleValue() / 100);
         }
-        if (features.getGrossTonnageGt() != null) {
-            target.setGrossTonnageGt(features.getGrossTonnageGt().doubleValue() / 100);
+        if (source.getGrossTonnageGt() != null) {
+            target.setGrossTonnageGt(source.getGrossTonnageGt().doubleValue() / 100);
         }
 
         // Base port location
         if (fetchOptions != null && fetchOptions.isWithBasePortLocation()) {
-            LocationVO basePortLocation = locationRepository.toVO(features.getBasePortLocation());
-            if (copyIfNull || basePortLocation != null) {
-                target.setBasePortLocation(basePortLocation);
+            if (basePortLocation != null) {
+                LocationVO targetBasePortLocation = locationRepository.toVO(basePortLocation);
+                if (copyIfNull || targetBasePortLocation != null) {
+                    target.setBasePortLocation(targetBasePortLocation);
+                }
+            }
+            else if (copyIfNull) {
+                target.setBasePortLocation(null);
             }
         }
 
         // Recorder department
         if (fetchOptions != null && fetchOptions.isWithRecorderDepartment()) {
-            DepartmentVO recorderDepartment = referentialDao.toTypedVO(features.getRecorderDepartment(), DepartmentVO.class).orElse(null);
+            DepartmentVO recorderDepartment = referentialDao.toTypedVO(source.getRecorderDepartment(), DepartmentVO.class).orElse(null);
             target.setRecorderDepartment(recorderDepartment);
         }
 
         // Vessel
         if (vessel != null) {
-            target.setId(vessel.getId());
+            target.setVesselId(vessel.getId());
             target.setVesselStatusId(vessel.getStatus().getId());
             target.setQualityFlagId(vessel.getQualityFlag().getId());
 
@@ -298,14 +306,14 @@ public class VesselSnapshotRepositoryImpl
             }
 
             // Update date
-            target.setUpdateDate(Dates.max(features.getUpdateDate(), vessel.getUpdateDate()));
+            target.setUpdateDate(Dates.max(source.getUpdateDate(), vessel.getUpdateDate()));
         }
         else if (copyIfNull) {
-            target.setId(null);
+            target.setVesselId(null);
             target.setVesselStatusId(null);
             target.setQualityFlagId(null);
             target.setVesselType(null);
-            target.setUpdateDate(features.getUpdateDate());
+            target.setUpdateDate(source.getUpdateDate());
         }
 
         // Registration period
@@ -318,8 +326,12 @@ public class VesselSnapshotRepositoryImpl
                 target.setIntRegistrationCode(registrationPeriod.getIntRegistrationCode());
 
                 // Registration location
-                LocationVO location = locationRepository.toVO(registrationPeriod.getRegistrationLocation());
-                target.setRegistrationLocation(location);
+                if (registrationLocation != null) {
+                    LocationVO location = locationRepository.toVO(registrationLocation);
+                    if (copyIfNull || location != null) {
+                        target.setRegistrationLocation(location);
+                    }
+                }
             }
             else if (copyIfNull) {
                 target.setRegistrationCode(null);
@@ -341,11 +353,24 @@ public class VesselSnapshotRepositoryImpl
         if (fetchOptions != null) {
             if (fetchOptions.isWithBasePortLocation())
                 entityGraph.addSubgraph(VesselFeatures.Fields.BASE_PORT_LOCATION);
-            if (fetchOptions.isWithRecorderPerson()) entityGraph.addSubgraph(VesselFeatures.Fields.RECORDER_PERSON);
+            if (fetchOptions.isWithRecorderPerson())
+                entityGraph.addSubgraph(VesselFeatures.Fields.RECORDER_PERSON);
             if (fetchOptions.isWithRecorderDepartment())
                 entityGraph.addSubgraph(VesselFeatures.Fields.RECORDER_DEPARTMENT);
         }
 
         query.setHint(QueryHints.HINT_LOADGRAPH, entityGraph);
+
+        this.configureIndexHints(query, fetchOptions);
+    }
+
+    protected void configureIndexHints(TypedQuery<?> query,
+                                       @Nullable VesselFetchOptions fetchOptions) {
+
+        // Adagio optimization
+        if (enableAdagioOptimization) {
+            query.setHint("org.hibernate.comment", String.format("+ INDEX(%s.VESSEL_REGISTRATION_PERIOD IX_VESSEL_REG_PER_END_DATE)", adagioSchema));
+        }
+
     }
 }
